--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Install httpd
       run: |
-        ssh ec2-user@${{variables.HOST}} 'sudo yum update && sudo yum install -y httpd unzip'
+        ssh ec2-user@3.82.230.111 'sudo yum update && sudo yum install -y httpd unzip'
         scp latest.zip ec2-user@3.82.230.111://home/ec2-user/
         ssh ec2-user@3.82.230.111 'cd /home/ec2-user/ && unzip latest.zip && cp -r wordpress/ /var/www/html/ '
         
