wordpress php mariadb deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,8 @@ jobs:
 
     - name: Install httpd
       run: |
-        ssh ec2-user@3.82.230.111 'sudo yum update && sudo yum install -y httpd unzip'
+        ssh ec2-user@3.82.230.111 'sudo yum update && sudo yum install -y httpd php unzip MariaDB && sudo systemctl enable --now httpd && systemctl enable --now MariaDB-server'
         scp latest.zip ec2-user@3.82.230.111://home/ec2-user/
-        ssh ec2-user@3.82.230.111 'cd /home/ec2-user/ && unzip latest.zip && cp -r wordpress/ /var/www/html/ '
+        ssh ec2-user@3.82.230.111 'cd /home/ec2-user/ && unzip latest.zip && sudo cp -r wordpress/ /var/www/html/ '
         
         
