--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,9 +10,6 @@ jobs:
     runs-on: Linux  # adjust OS image as per your deployment server OS
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
     - name: Set up SSH
       uses: webfactory/ssh-agent@v0.5.4
       with:
@@ -21,7 +18,20 @@ jobs:
     - name: Install httpd
       run: |
         ssh ec2-user@3.82.230.111 'sudo yum update && sudo yum install -y httpd php unzip mariadb105-server php8.3-mysqlnd && sudo systemctl enable --now httpd && sudo systemctl enable --now  mariadb && rm -r /home/ec2-user/wordpress'
-        scp latest.zip ec2-user@3.82.230.111://home/ec2-user/
-        ssh ec2-user@3.82.230.111 'cd /home/ec2-user/ && unzip latest.zip && sudo cp -r wordpress/ /var/www/html/ '
         
-        
+  Deploy_code:
+    runs-on: Linux
+    
+    steps:
+        - name: Checkout repository
+          uses: actions/checkout@v2
+          
+        - name: Set up SSH
+          uses: webfactory/ssh-agent@v0.5.4
+          with:
+            ssh-private-key: ${{ secrets.DEPLOYMENT_SERVER_SSH_PRIVATE_KEY }}
+
+        - name: copy artifact
+          run: |
+            scp latest.zip ec2-user@3.82.230.111://home/ec2-user/
+            ssh ec2-user@3.82.230.111 'cd /home/ec2-user/ && unzip latest.zip && sudo cp -r wordpress/ /var/www/html/ '
